完成查询游戏报表功能
